WebStore/src/objects/Request_for_Item__c.object
<CustomObject>
    <fields>
        <fullName>Item_ID__c</fullName>
        <label>Item ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Request for Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Request for Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests for Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>